--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,44 @@
 version: '3.1'
 services:
-  rasa:
-    image: rasa/rasa:latest-full
+
+  duckling-server:
+    image: rasa/duckling:latest
     ports:
-      - 5005:5005
+    - 8000:8000
+    networks:
+    - all
+
+  rasa-server:
+    image: rasa-bot:latest
+    working_dir: /app
+    build: "./"
+    restart: always
     volumes:
-      - ./:/app
-    command:
-      - run
-  
-  action_server:
-    image: rasa/rasa-sdk:latest
-    networks: ['rasa-network']
+    - ./actions:/app/actions
+    - ./data:/app/data
+    command: bash -c "rm -rf models/* && rasa train && rasa run --enable-api --cors \"*\" --debug"
     ports:
-    - "5055:5055"
+    - '5006:5005'
+    public: true
+    networks:
+    - all
+
+  rasa-actions-server:
+    image: rasa-bot:latest
+    working_dir: /app
+    build: "./"
+    restart: always
     volumes:
-    - "./rasa-app-data/actions:/app/actions"
+    - ./actions:/app/actions
+    - ./utils:/app/utils
+    command: ["rasa", "run", "actions"]
+    ports:
+    - '5055:5055'
+    networks:
+    - all
+
+networks:
+  all:
+    driver: bridge
+    driver_opts:
+      com.docker.network.enable_ipv6: "true"
