--- a/credentials.yml
+++ b/credentials.yml
@@ -4,4 +4,4 @@ socketio:
   bot_message_evt: bot_uttered
   session_persistence: true
 rasa:
-  url: "http://localhost:5002/api"
+  url: "https://borishksh.github.io/mental_health_chatbot_rasa:5002/api"
