--- a/endpoints.yml
+++ b/endpoints.yml
@@ -1,2 +1,2 @@
 action_endpoint:
-  url: "http://localhost:5055/webhook"
+  url: "https://borishksh.github.io/mental_health_chatbot_rasa:5055/webhook"
